# cargo-stripper

./: Cargo.toml
src/: driver.rs  main.rs
