[package]
name = "cargo-stripper"
description = "rustdoc-stripper but ported as a cargo plugin"
version = "0.1.0"
edition = "2021"
default-run = "cargo-stripper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"

[[bin]]
name = "cargo-stripper"
path = "src/main.rs"

[[bin]]
name = "stripper-driver"
path = "src/driver.rs"